--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buoyancy Demo</title>
+    
+    <!-- Базовые стили для правильного отображения canvas -->
+    <style>
+        body {
+            background-color: #000;
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* Предотвращает появление полос прокрутки */
+        }
+        canvas {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -webkit-transform: translate(-50%, -50%);
+        }
+    </style>
+
+    <!-- Подключение Pixi.js через CDN -->
+    <script src="https://pixijs.download/v8.0.2/pixi.min.js"></script>
+</head>
+<body>
+    <!-- Здесь можно добавить описание или инструкции -->
+    <div id="gameDescription" style="position: absolute; color: white; padding: 10px; z-index: 100; display: none;">
+        Демонстрация физики плавучести
+    </div>
+
+    <!-- Подключение вашего основного скрипта -->
+    <script src="buoyancy_test.js"></script>
+</body>
 </html>
