--- a/index.html
+++ b/index.html
@@ -1,42 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buoyancy Demo</title>
-    
-    <!-- Базовые стили для правильного отображения canvas -->
+    <title>Балансер решений</title>
     <style>
-        body {
-            background-color: #000;
-            padding: 0;
+        html, body {
             margin: 0;
+            padding: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden; /* Предотвращает появление полос прокрутки */
+            overflow: hidden;
+            background-color: #000;
         }
-        canvas {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            -o-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-            -moz-transform: translate(-50%, -50%);
-            -webkit-transform: translate(-50%, -50%);
+        #error-message {
+            color: white;
+            padding: 20px;
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: rgba(255, 0, 0, 0.8);
+            z-index: 9999;
         }
     </style>
-
-    <!-- Подключение Pixi.js через CDN -->
-    <script src="https://pixijs.download/v8.0.2/pixi.min.js"></script>
 </head>
 <body>
-    <!-- Здесь можно добавить описание или инструкции -->
-    <div id="gameDescription" style="position: absolute; color: white; padding: 10px; z-index: 100; display: none;">
-        Демонстрация физики плавучести
-    </div>
-
-    <!-- Подключение вашего основного скрипта -->
-    <script src="buoyancy_test.js"></script>
+    <div id="error-message"></div>
+    <script>
+        window.onerror = function(msg, url, line) {
+            document.getElementById('error-message').style.display = 'block';
+            document.getElementById('error-message').textContent = `Ошибка: ${msg} (строка ${line})`;
+            return false;
+        };
+    </script>
+    <script src="lib/pixi.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script>
+        // Проверяем загрузку библиотек
+        if (typeof PIXI === 'undefined') {
+            document.getElementById('error-message').style.display = 'block';
+            document.getElementById('error-message').textContent = 'Ошибка: Не удалось загрузить PIXI.js';
+        }
+        if (typeof gsap === 'undefined') {
+            document.getElementById('error-message').style.display = 'block';
+            document.getElementById('error-message').textContent = 'Ошибка: Не удалось загрузить GSAP';
+        }
+    </script>
+    <script src="balancer.js"></script>
 </body>
-</html>
+</html> 
